# MyoroPlayerLinux

./: CMakeLists.txt  LICENSE  README.md  TODO  build.sh
TAGLIB SAMPLE/: tablib.cpp
include/: Controls.h  Frame.h  MenuBar.h  SongList.h  UpdateSlider.h
src/: Controls.cpp  Frame.cpp  MenuBar.cpp  SongList.cpp  UpdateSlider.cpp
